# qlementine-themes

./: README.md
galery/src/: generate_gallery.py
galery/tests/: test_generate_gallery.py
gallery/src/: generate_gallery.py
gallery/tests/: test_generate_gallery.py
python-qt/: .gitignore  README.md  pyproject.toml
python-qt/examples/: gruvbox_pyside6.py
python-qt/src/jakerdy/: __init__.py
python-qt/src/jakerdy/qlementine_themes/: __init__.py
python-qt/src/jakerdy/qlementine_themes/themes/: alpine.json  hello-kitty.json  shrek.json  solarized-dark.json
python-qt/tests/: test_api.py
theme-editor/: .gitignore  README.md  main.py  pyproject.toml
theme-editor/src/theme_editor/: app.py  constants.py  fonts.py  live_preview.py  main_window.py  schema.py  theme_editor_widget.py  theme_utils.py
theme-editor/src/theme_editor/live_preview/: __init__.py  common.py  data.py  feedback.py  forms.py  navigation.py  overview.py  widget.py
themes/: _common_.json  alpine.json  cold-dark.json  cold-light.json  dark.json  dracula.json  graytable.json  gruvbox.json  hello-kitty.json  khaki.json  light.json  mint-cocktail.json  neutral-dark.json  neutral-light.json  nixie-dawn.json  nord.json  old-terminal.json  shrek.json  solarized-dark.json  solarized-light.json  tokyo-night.json  tron-dark.json  tron-light.json  warm-dark.json  warm-light.json
